--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nx-angular-dotnet-oidc",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "license": "MIT",
   "scripts": {
     "format": "prettier --write apps/shop"
@@ -13,6 +13,7 @@
     "@angular/cli": "~17.0.0",
     "@angular/compiler-cli": "~17.0.0",
     "@angular/language-service": "~17.0.0",
+    "@angular/localize": "~17.0.0",
     "@nx-dotnet/core": "^2.1.1",
     "@nx/angular": "^17.1.1",
     "@nx/jest": "17.1.1",
@@ -41,6 +42,9 @@
     "@angular/platform-browser": "~17.0.0",
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.0"
