feat(shop): prepare first components

--- a/nx.json
+++ b/nx.json
@@ -56,7 +56,12 @@
       "unitTestRunner": "jest"
     },
     "@nx/angular:component": {
-      "style": "scss"
+      "style": "scss",
+      "standalone": true,
+      "changeDetection": "OnPush",
+      "inlineStyle": true,
+      "inlineTemplate": true,
+      "skipTests": true
     }
   },
   "plugins": [
