--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@angular/platform-browser": "~17.0.0",
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^16.0.0-rc.0",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "angular-auth-oidc-client": "^16.0.1",
     "bootstrap": "^5.3.2",
