--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nx-angular-dotnet-oidc",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "license": "MIT",
   "scripts": {
     "format": "prettier --write apps/shop",
@@ -44,6 +44,7 @@
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ngrx/signals": "^17.0.0",
     "@popperjs/core": "^2.11.8",
     "angular-auth-oidc-client": "^16.0.1",
     "bootstrap": "^5.3.2",
