--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/compiler-cli": "~17.0.0",
     "@angular/language-service": "~17.0.0",
     "@angular/localize": "~17.0.0",
-    "@nx-dotnet/core": "^2.1.1",
+    "@nx-dotnet/core": "^2.1.2",
     "@nx/angular": "^17.1.1",
     "@nx/jest": "17.1.1",
     "@nx/js": "17.1.1",
@@ -23,14 +23,14 @@
     "@schematics/angular": "~17.0.0",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.10",
     "@types/node": "16.11.7",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~13.1.3",
     "nx": "17.1.1",
-    "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
+    "prettier": "^3.1.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "10.9.1",
     "typescript": "~5.2.2"
   },
@@ -44,12 +44,12 @@
     "@angular/platform-browser-dynamic": "~17.0.0",
     "@angular/router": "~17.0.0",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
-    "@ngrx/signals": "^17.0.0",
+    "@ngrx/signals": "^17.0.1",
     "@popperjs/core": "^2.11.8",
     "angular-auth-oidc-client": "^16.0.1",
     "bootstrap": "^5.3.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.0"
+    "zone.js": "^0.14.2"
   }
 }
