refactor(shop-api): update unit of work implementation

--- a/apps/shop-api/appsettings.json
+++ b/apps/shop-api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=/tmp/nx-angular-dotnet-oidc/shop-api.sqlite3"
+  },
   "AllowedHosts": "*",
   "AllowedCorsOrigins": "http://localhost:5201;http://127.0.0.1:5201"
 }
