--- a/apps/shop-api/ShopApi.csproj
+++ b/apps/shop-api/ShopApi.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.24" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.2" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="4.10.1" />
     <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.8.0" />
